container/kubernetes/patterns/nfs/nfs-provisioner.yaml
# NFS Storage Class Provisioner
# Install this if you want dynamic provisioning from NFS

# Reference: https://github.com/kubernetes-sigs/nfs-subdir-external-provisioner

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-client-provisioner
  namespace: suricata-monitoring
  labels:
    app: nfs-client-provisioner
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-client-provisioner
  template:
    metadata:
      labels:
        app: nfs-client-provisioner
    spec:
      serviceAccountName: nfs-client-provisioner
      containers:
      - name: nfs-client-provisioner
        image: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2
        volumeMounts:
        - name: nfs-client-root
          mountPath: /persistentvolumes
      volumes:
      - name: nfs-client-root
        nfs:
          server: nfs-server.example.com  # Change this!
          path: /exports/k8s-pvs  # Change this!
